# vldb26-iouring

./: .clangd  .gitignore  .gitmodules  0001-uring-opts.patch  CMakeLists.txt  README.md  buffer_mgr_model.rmd
experiments/: .gitignore  bench_async_tw.py  bench_buf_clone.py  bench_buffer_mgr.py  bench_fsync.py  bench_nop.py  bench_shufflev2.py  bench_sqpoll_wakeup.py  bench_ssd_batches.py  bench_ssd_fio.py  bench_tcpudp_lat.py  bench_vmcache.py  bench_zc_threshold.py  plot_async_tw.R  plot_buf_clone.R  plot_buffer_mgr.R  plot_fsync.R  plot_nop_batching.R  plot_postgres.R  plot_shufflev2.R  plot_shufflev2_epoll.R  plot_shufflev2_unfairness.R  plot_sqpoll_wakeup.R  plot_ssd_batches.R  plot_ssd_bs.R  plot_ssd_scaleout.R  plot_tcpudp_lat.R  plot_uring_opts.R  plot_zc_threshold.R  shell.nix  start_server.sh  utils.R  utils.py  watch.sh
experiments/data/: bench_async_tw.csv  bench_buf_clone.csv  bench_buffer_mgr.csv  bench_fsync.csv  bench_nop3.csv  bench_postgres.csv  bench_sqpoll_wakeup.csv  bench_ssd_batches.csv  bench_ssd_bs.csv  bench_ssd_scaleout.csv  bench_tcpudp_lat.csv  bench_vmcache.csv  bench_zc_threshold.csv
experiments/postgres/: run_all.sh  run_pg_experiment.sh
fio/t/: io_uring.c
perfevent_c/: main.c  perf_event.c  perf_event.h
script/: aws_install_kernel.sh  aws_rm_kernel.sh  clear_ntuple.sh  commits.json  install_nix.sh  io-worker.sh  kernel_iouring.csv  kernel_log.py  nic_irq.py  nvme_irq.py  perf_flame.sh  plot_kernel_iouring.R  remap_nic_irqs.py  reset_ssds.sh  select_kernel.sh  set_cpu_governor.sh  setup_zcrx.sh  ubuntu_install_kernel.sh  ubuntu_rm_kernel.sh  write_ssds.sh
src/: CMakeLists.txt  bench_buf_reg.cpp  bench_fsync.cpp  bench_nop.cpp  bench_sqpoll_wakeup.cpp  bench_ssd_batches.cpp  cfg_net.hpp  client.cpp  client_bw.cpp  epoll_client.cpp  epoll_server.cpp  server.cpp  server_bw.cpp  zc_recv.cpp
src/buffer_mgr/: CMakeLists.txt  bm.cpp  bm.hpp  btree.cpp  btree.hpp  btree_node.hpp  buffer_mgr.cpp  config.cpp  config.hpp  exp_table.hpp  guards.hpp  kuring.hpp  rh_backshift_u64_map.hpp  spsc_ring.hpp  types.hpp  utils.hpp  ycsb_workload.hpp
src/buffer_mgr/tpcc/: random_generator.cpp  random_generator.hpp  schema.hpp  tpcc_globals.cpp  tpcc_workload.hpp  types.cpp  types.hpp
src/shuffle/: CMakeLists.txt  mini_alloc.hpp  shufflev2.cpp  types.hpp  utils.hpp  zc_recv_helper.hpp
src/utils/: CMakeLists.txt  cli_parser.hpp  cpu_map.cpp  cpu_map.hpp  hashtable.hpp  hugepages.cpp  hugepages.hpp  iou_bufring.hpp  jmp.hpp  latency.hpp  literals.hpp  mem_dump.hpp  my_asserts.hpp  my_logger.hpp  nostd.hpp  nvme.hpp  perfevent.hpp  random.hpp  range_helper.hpp  rate_limiter.hpp  rdtsc_clock.cpp  rdtsc_clock.hpp  ring.hpp  singleton.hpp  small_pages.cpp  small_pages.hpp  socket.hpp  stack.hpp  stats_printer.cpp  stats_printer.hpp  stopper.hpp  tagged_pointer.hpp  threadpool.hpp  types.cpp  types.hpp  utils.hpp
